fix: word wrap

--- a/src/pages/localization/page.module.css
+++ b/src/pages/localization/page.module.css
@@ -26,7 +26,7 @@
 }
 
 .description {
-  @apply break-all h-full overflow-y-scroll no-scrollbar;
+  @apply h-full overflow-y-scroll overflow-x-hidden break-words no-scrollbar;
 }
 
 .description h1 {
